# CutFEM-Library

cmake/: FindGMSH.cmake  FindMUMPS.cmake  FindSCOTCH.cmake
cpp/: cutfem.hpp
cpp/FESpace/: FESpace.hpp  GTypeOfFE.hpp  GTypeOfFE_Sum.hpp  NumberSpace.hpp  P0.cpp  P3.cpp  P4.cpp  QuadratureFormular.cpp  expression.cpp  expression.hpp  expression.tpp  integrationFunFEM.hpp  interpolation.hpp  limiter.hpp  macroElement.hpp  normsFunFEM.hpp  paraview.cpp  paraview.hpp
cpp/common/: AlgoimInterface.tpp  GenericMesh.hpp  Mesh1dn.cpp  Mesh2dn.cpp  Mesh2dn.hpp  Mesh3dn.cpp  SparseMatMap.cpp  SparseMatMap.hpp  cut_mesh.cpp  cut_mesh.hpp  cut_mesh.tpp  cut_method.cpp  geometry.cpp  geometry.hpp  interface_levelSet.hpp  interface_levelSet.tpp  logger.hpp  memoryPool.hpp  point.hpp
cpp/concept/: function.hpp
cpp/example/: CMakeLists.txt
cpp/example/convection_diffusion/: bulk.cpp  coupled.cpp  merging.cpp  merging_quad.cpp
cpp/example/darcy_fictitious/: DF_example1.cpp
cpp/example/darcy_interface/: DI_example1.cpp
cpp/example/tests/: test_dg.cpp
cpp/num/: gnuplot.hpp  matlab.hpp  util.hpp
cpp/parallel/: CMakeLists.txt  cfomp.hpp
cpp/problem/: AlgoimBaseCutProblem.hpp  AlgoimIntegration.hpp  CMakeLists.txt  baseCutProblem.cpp  baseCutProblem.hpp  baseCutProblem_Function.hpp  baseProblem.hpp  baseProblem_Function.hpp  boundary.cpp  boundary.hpp  itemVF.hpp  problem.hpp  solver_advection.hpp  solver_curvature.hpp  solver_stokes.hpp  testFunction.hpp
cpp/solver/: CMakeLists.txt  solver.cpp  solver.hpp  solverMumps.cpp  solverMumps.hpp  solverMumpsMPI.cpp
(+4 files in other folders)
